# RAQQuantTradingAgent

./: .env.example  .gitignore  API_KEYS_SETUP.md  API_QUOTA_ISSUE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  EXPECTED_OUTPUT.md  FINAL_CHECKLIST.md  GETTING_STARTED.md  GITHUB_PUSH_COMPLETE.md  GITHUB_SETUP_INSTRUCTIONS.md  INSTALL_DEPENDENCIES.md  LICENSE  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  build_proto.sh  docker-compose.yml  requirements.txt  setup.sh  vcpkg.json
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md
include/data_ingestion/: data_fetcher.h  database.h
include/rag/: rag_agent.h
include/utils/: logger.h
include/vectorization/: embedding_service.h  faiss_index.h
proto/: rag_service.proto
python_client/: rag_service_pb2.py  rag_service_pb2_grpc.py
scripts/: build_vector_index.py  client_example.py  create_github_repo.sh  ingest_data.py  init_github_repo.sh  install_macos_deps.sh  load_env.sh  prepare_github.sh  run_all.sh  run_server.sh  test_client.py  verify_setup.sh
src/: main.cpp
src/api/: grpc_server.cpp  grpc_server.h
src/data_ingestion/: data_fetcher.cpp  database.cpp
src/python_bindings/: python_bridge.cpp
src/rag/: rag_agent.cpp
src/utils/: logger.cpp
src/vectorization/: embedding_service.cpp  faiss_index.cpp
